add unit test and integration test
- mocking dependencies with Mockito